[package]
name = "secure_backup"
version = "0.1.0"
authors = ["Behzad Eshan"]
description = "Take an incremental secure backup from a directory"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/bitair-org/secure-backup"
repository = "https://github.com/bitair-org/secure-backup"
edition = "2021"
readme = "README.md"

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
